# gguf-parity-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: adapters.md  llamacpp-layer-dump.md
examples/minimal/: README.md  metadata_candidate.json  metadata_reference.json  prompts.txt
parity_tools/: __init__.py  cli.py  io.py  metrics.py  reports.py  token_audit.py
scripts/: dump_llamacpp_python_logits.py
tests/: test_metrics.py
tools/: dump_llamacpp_layers.cpp
