[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gguf-parity-tools"
version = "0.1.0"
description = "Reference-comparison tools for GGUF inference implementations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
license = { text = "MIT" }
authors = [{ name = "voidwest" }]

[project.scripts]
gguf-parity = "parity_tools.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["parity_tools*"]

